setup redux with immutablejs

--- a/package.json
+++ b/package.json
@@ -50,13 +50,15 @@
   },
   "dependencies": {
     "immutable": "^3.8.1",
+    "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-create-reducer": "^1.1.1",
     "redux-immutable": "^3.0.10",
-    "redux-logger": "^2.7.4"
+    "redux-logger": "^2.7.4",
+    "uuid": "^3.0.1"
   },
   "scripts": {
     "start": "HOST=0.0.0.0 PORT=8080 node scripts/start.js",
