--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "immutable": "^3.8.1",
+    "localforage": "^1.4.3",
     "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -58,6 +59,8 @@
     "redux-create-reducer": "^1.1.1",
     "redux-immutable": "^3.0.10",
     "redux-logger": "^2.7.4",
+    "redux-persist": "^4.3.1",
+    "redux-persist-immutable": "^4.2.0",
     "uuid": "^3.0.1"
   },
   "scripts": {
