--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   },
   "scripts": {
     "start": "HOST=0.0.0.0 PORT=8080 node scripts/start.js",
-    "build": "node scripts/build.js"
+    "build": "node scripts/build.js && mv build docs"
   },
   "babel": {
     "presets": [
@@ -74,5 +74,6 @@
   },
   "eslintConfig": {
     "extends": "react-app"
-  }
+  },
+	"homepage": "https://jwoos.github.io/web_todo"
 }
